--- a/src/main/resources/static/ejemplo3.html
+++ b/src/main/resources/static/ejemplo3.html
@@ -9,9 +9,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta charset="UTF-8"/>
     </head>
     <body>
+        <a href="ejemplo2.html">Back</a> |
+        <a href="index.html">Home</a> |
+        <a href="ejemplo4.html">Next</a><hr>
         <h1 style="text-align: center;background-color: blue; color: white" > Ejemplo 3</h1>
         <p>Encabezados</p>
-        
+       
         <h1>Encabezado nivel 1</h1>
         <h2>Encabezado nivel 2</h2>
         <h3>Encabezado nivel 3</h3>
