--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <a href="ejemplo3.html">Back</a> |
-        <a href="index.html">Home</a> |
+        <a href="index1.html">Home</a> |
         <a href="ejemplo3.html">Next</a><hr>
         
         <h1 style="text-align: center;background-color: blue; color: white" > Ejemplo 2</h1>
